StudyCase1/K8S/authentication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
      - name: authentication
        image: rizhy/authentication:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authentication
  ports:
  - name: authentication
    protocol: TCP
    port: 80
    targetPort: 80
