StudyCase1/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: devbootcamp.id
      http:
        paths:
          - path: /api/enrollments
            pathType: Prefix
            backend:
              service:
                name: enrollment-clusterip-srv
                port:
                  number: 80
          - path: /api/p/enrollments
            pathType: Prefix
            backend:
              service:
                name: payment-clusterip-srv
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: authentication-clusterip-srv
                port:
                  number: 80
